[gd_scene load_steps=2 format=3 uid="uid://bjyqlhu1baply"]

[ext_resource type="Script" path="res://enemy_waves/wave_inf.gd" id="1_x72fj"]

[node name="Wave_inf" type="Node2D"]
script = ExtResource("1_x72fj")

[node name="EnemySpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="EnemyCollectionNode" type="Node" parent="."]

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
